--- a/vignettes/2_ParamOptimization_caracoles.Rmd
+++ b/vignettes/2_ParamOptimization_caracoles.Rmd
@@ -4,8 +4,10 @@ output: rmarkdown::html_vignette
 author: cxr team
 vignette: >
   %\VignetteIndexEntry{Multi-species parameter optimization}
-  %\VignetteEngine{knitr::rmarkdown}
   \usepackage[utf8]{inputenc}
+  %\VignetteEngine{knitr::rmarkdown}
+editor_options: 
+  chunk_output_type: console
 ---
 
 **Introduction**
@@ -31,7 +33,7 @@ data(salinity, package = "cxr")
 
 **Preparing the data**
 
-This part consists in two different points. First we build a data structure that will hold the results for all species, and second we prepare the example database for the analysis.
+First we need to format the example dataset for the analysis and add the initial values needed as inputs for model parametrization.
 
 ```{r message=F, warning=F}
 # spread the data from long to wide format
@@ -51,7 +53,7 @@ Now, we set some general variables regarding the models we want to use, and the 
 Note that if we include more than one model, the optimization procedures proceed sequentially; e.g., if we estimate parameters from models 3, 4, and 5. 
 
 ```{r message=F, warning=F}
-models <- 3:5
+models <- 3:5 # Ideally, you should start by model 1, and build from there, here we start at model 3 for demonstration purposes
 ```
 
 This sequential procedure means tha the output from model 3 will be taken as initial estimates for model 4, and the output from model 4 will be the initial estimates for model 5. Note, as well, that models 4 and 5 differ from model 3 in that they include the effect of covariates on species seed production in the absence of competition and interactions. Therefore, you should only include these models if you have at least one covariate in your data (see *Lanuza, Bartomeus, Godoy. 2018. Ecology Letters 21:865-874*).
@@ -60,16 +62,18 @@ We can estimate the whole parameter set for each model, or fix certain parameter
 
 ```{r message=F, warning=F}
 # which values do we optimize for each model?
-param.list <- list(c("lambda","alpha"),
-                   c("lambda","alpha","lambda.cov","alpha.cov"),
-                   c("lambda","alpha","lambda.cov","alpha.cov"))
+param.list <- list(m3 = c("lambda","alpha"),
+                   m4 = c("lambda","alpha","lambda.cov","alpha.cov"),
+                   m5 = c("lambda","alpha","lambda.cov","alpha.cov"))
 ```
 
 In case you had independent estimates of parameters, you would have something along these lines:
 
 ```{r message=F, warning=F}
-# init.lambda <- rep(1,length(focal.sp))
-# init.alpha <- matrix(rnorm(ncol(comp.matrix)*ncol(comp.matrix),1,0.01),nrow = ncol(comp.matrix),ncol = ncol(comp.matrix))
+#param.list <- list(m3 = c(alpha"),
+ #                  m4 = c("alpha","lambda.cov","alpha.cov"),
+ #                  m5 = c("alpha","lambda.cov","alpha.cov")) 
+# init.lambda <- rep(10,length(focal.sp)) # As an example, here we force the value of lambda to take the value of 10 for all species.
 ```
 
 Keep the model definitions in a list, for ease:
@@ -88,11 +92,11 @@ colnames(covariates) <- "sum_salinity"
 # covariates <- 0
 ```
 
-Here we specify which optimization methods to use. You can include more than one.
+Here we specify which optimization methods to use. You can include more than one (but see below). In this case we only use optim_NM because it is one of the default methods.
 
 ```{r message=F, warning=F}
 # optimization methods to use
-optim.methods <- c("optim_NM"
+optim.methods <- c("optim_NM" 
                    # "optim_L-BFGS-B"
                   # "nloptr_CRS2_LM"
                    # "nloptr_ISRES"
@@ -103,7 +107,7 @@ optim.methods <- c("optim_NM"
 )
 ```
 
-Since the routine takes the input for a given model from the output of the previous model, we need to specifiy, if we selected more than one optimization method, from which method it will take these initial values:
+Since the routine takes the input for a given model from the output of the previous model, we need to specifiy, if we selected more than one optimization method, from which method it will take these initial values. This means that even if we want to try different optimization methods on different models it is wise to run them one by one.
 
 ```{r message=F, warning=F}
 # from which method are we taking initial estimates for the next model?
@@ -117,13 +121,13 @@ We also need to specify the initial values for the first model (model 3, in this
 # values for initial estimates of parameters. 
 # Overwrite if necessary
 # init.lambda is calculated after log.fitness for each focal species
-lower.lambda <- 1
-upper.lambda <- 1e4
+lower.lambda <- 1 # asumption that at minium it will produce 1 seed. We avoid zero seeds scenario, because it precludes the use of log().
+upper.lambda <- 1e3
 # sigma
 lower.sigma <- 1e-5
 upper.sigma <- 1
 # alpha
-init.alpha <- 1e-4
+init.alpha <- 0 # DAVID: As in the first example
 lower.alpha <- 1e-10
 upper.alpha <- 1e5
 # lambda.cov
@@ -147,16 +151,16 @@ And a flag for storing or not the results of the analysis
 
 ```{r message=F, warning=F}
 # store results?
-write.results <- TRUE
+write.results <- FALSE
 ```
 
 **Initialize results structure** 
 
-We will store the results of our analysis in a nested list, following the nested design of the optimization proccess. For each focal species, we calculate three different models (given in `models`), and for each of these models, we obtain the parameterization from a series of optimization methods (given in `optim.methods`). Thus, we create a list, named `param_estimates`, of the form:
+We will store the results of our analysis in a nested list, following the nested design of the optimization proccess. For each focal species, we calculate three [check!]() different models (given in `models`), and for each of these models, we obtain the parameterization from a series of optimization methods (given in `optim.methods`). Thus, we create a list, named `param_estimates`, of the form:
 
 `param_estimates[[species]][[model]][[method]]`
 
-This is done with a series of nested loops:
+We create this outcome empty placeholder with a series of nested loops:
 
 ```{r}
 param_estimates <- list()
@@ -165,7 +169,7 @@ for(i.sp in 1:length(focal.sp)){
   for(i.model in 1:length(models)){
     param_estimates[[i.sp]][[i.model]] <- list()
     for(i.method in 1:length(optim.methods)){
-      param_estimates[[i.sp]][[i.model]][[i.method]] <- list(lambda = 0,
+      param_estimates[[i.sp]][[i.model]][[i.method]] <- list(lambda = NA, #turn to NA if possible 
                                                             lambda.lower.error = 0,
                                                             lambda.upper.error = 0,
                                                             sigma = 0,
@@ -204,7 +208,7 @@ for(i.sp in 1:length(focal.sp)){
   focal <- unique(focal.sp.data$focal)
   # fitness metric...
   # subset >0 records, for calculating logarithms
-  focal.sp.data <- subset(focal.sp.data, seed > 0)
+  focal.sp.data <- subset(focal.sp.data, seed > 0) #OSCAR, really? Oscar dice que adelante con el +0.01
   fitness <- focal.sp.data$seed #fitness
   log.fitness <- log(fitness)
   # competition matrix: number of competitors
@@ -277,13 +281,10 @@ for(i.sp in 1:length(focal.sp)){
   
   # model to optimize  
   for(i.model in 1:length(models)){
-    
-    # print("*********************************")
-    # print(paste(date()," - starting focal sp ",focal.sp[i.sp],", model ",models[i.model],sep=""))
-    # print("*********************************")
-
-    ######################
-    # 3) compute each method
+    print("*********************************") #use message in future.
+    print(paste(date()," - starting focal sp ",focal.sp[i.sp],", model ",models[i.model],sep=""))
+    print("*********************************")
+  # 3) compute each method
     
     for(i.method in 1:length(optim.methods)){
       
